# st-openai-embeddings-connection

./: .gitignore  LICENSE  README.md  helpers.py  pyproject.toml  requirements.txt  streamlit_app.py
src/st_openai_embeddings_connection/: __init__.py  connection.py
