[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "st-openai-embeddings-connection"
version = "0.1.1"
description = "A Python package for connecting to OpenAI embedding models in Streamlit apps"
authors = [
    {name = "Gerard Bentley", email = "gerardrbentley@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8.0"
dependencies = ["streamlit >= 1.22.0"]
